# towerpy

./: .gitattributes  .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  meta.yaml  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
datasets/mfs_mclass/: metoffice-c-band-rain-radar_jersey_202010030735_raw-dual-polar-augzdr-lp-el0.dat.tpmc
doc/source/: api.rst  conf.py  index.rst  usage.rst
docs/: index.md  readthedocs-environment.yml  requirements.txt
docs/jupyter_execute/dvcmaps/: plot_allcmaps.ipynb  plot_cmaps_cvd.ipynb  plot_cmaps_grey.ipynb
docs/jupyter_execute/notebooks/: computeRD-QVPs.ipynb  import_radardata.ipynb  radchain_ukmo9.ipynb  radchain_ukmo90.ipynb  radchain_ukmoC.ipynb  radchain_ukmo_QVP_hti.ipynb  recipe for the MFS computation.ipynb
docs/source/: conf.py  index.rst
docs/source/api/: ref_guide.rst
docs/source/dvcmaps/: cmgallery.rst  plot_allcmaps.ipynb  plot_cmaps_cvd.ipynb  plot_cmaps_grey.ipynb
examples/: radar_processing_chain.py  radchain_ukmo.py  radchain_ukmoQVP-HTI.py  radchain_ukmoQVP.py  radchain_ukmoVP-HTI.py  radchain_ukmoVP.py  relating_pradpy2wradlib.py
notebooks/: Recipe for the MFS computation.ipynb  radchain_ukmo9.ipynb  radchain_ukmoC.ipynb  radchain_ukmo_QVP_hti.ipynb  recipe for the MFS computation.ipynb
scripts/: radchain_ukmo.py  radchain_ukmoQVP-HTI.py  radchain_ukmoQVP.py  radchain_ukmoVP-HTI.py  radchain_ukmoVP.py
towerpy/: __init__.py  base.py
towerpy/attc/: __init__.py  attc_zhzdr.py  r_att_refl.py
towerpy/calib/: __init__.py  calib_phidp.py  calib_zdr.py
towerpy/datavis/: __init__.py  rad_animation.py  rad_display.py  rad_interactive.py  tpy_cm.py  tpy_colors.py
towerpy/eclass/: __init__.py  nme.py  snr.py
towerpy/georad/: __init__.py  coordinate_transformation_tool.py  georef_rdata.py
towerpy/io/: __init__.py  empty.py  ncas.py  ukmo.py
towerpy/ml/: __init__.py  mlyr.py
towerpy/profs/: __init__.py  polprofs.py
towerpy/qpe/: __init__.py  qpe_algs.py
towerpy/utils/: __init__.py  radutilities.py  unit_conversion.py
(+22 files in other folders)
