[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "towerpy-rd"
description = """Towerpy: an open-source toolbox for processing polarimetric radar data"""
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
authors = [
    { name = "Daniel Sanchez-Rivas", email = "towerpy@icloud.com" },
    { name = "Miguel A Rico-Ramirez", email = "M.A.Rico-Ramirez@bristol.ac.uk" },
]

classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dynamic = ["version", "dependencies", "optional-dependencies", "readme"]

[project.urls]
article = "https://doi.org/10.1016/j.envsoft.2023.105746"
documentation = "https://towerpy.readthedocs.io/en/latest/"
repository = "https://github.com/uobwatergroup/towerpy"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools]
packages = ["towerpy", "towerpy.attc", "towerpy.calib", "towerpy.datavis", "towerpy.eclass", "towerpy.eclass.mfs_cband", "towerpy.eclass.mfs_xband", "towerpy.eclass.ukmo_cmaps.chenies","towerpy.georad", "towerpy.io", "towerpy.ml", "towerpy.profs", "towerpy.qpe", "towerpy.utils"]

[tool.black]
line-length = 88

[tool.ruff]
target-version = "py39"
builtins = ["ellipsis"]
exclude = [
    ".eggs",
    "docs",
]

# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]

[tool.ruff.isort]
known-first-party = ["towerpy"]
